--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,24 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <meta name="theme-color" content="#1f2937" />
+    <meta name="description" content="A modern social media platform with chat, clubs, articles, and community features" />
+    <meta name="keywords" content="social media, chat, clubs, articles, community" />
+    <meta name="author" content="Umunsi Media Team" />
+    <meta name="robots" content="index, follow" />
+    <meta property="og:title" content="Umunsi Media - Social Media Platform" />
+    <meta property="og:description" content="A modern social media platform with chat, clubs, articles, and community features" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://chartapp.com" />
+    <meta property="og:image" content="/og-image.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Chart App - Social Media Platform" />
+    <meta name="twitter:description" content="A modern social media platform with chat, clubs, articles, and community features" />
+    <meta name="twitter:image" content="/og-image.png" />
+    <title>Umunsi Media - Social Media Platform</title>
   </head>
   <body>
     <div id="root"></div>
